# Aspect-Bench

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_repo.md
.github/workflows/: ci.yml
example_kb/: AGENTS.md  kb_djangopackages.txt  kb_fastapi.txt
src/: .gitignore  pytest.ini
src/aspect_bench/: __init__.py
src/repos/djangopackages/prompts/: api-error-schema_aspect.txt  api-error-schema_baseline.txt  api-grid-404_aspect.txt  api-grid-404_baseline.txt  api-metrics-endpoint_aspect.txt  api-metrics-endpoint_baseline.txt  api-package-404_aspect.txt  api-package-404_baseline.txt  github-fetch-timeout_aspect.txt  github-fetch-timeout_baseline.txt  grid-json-export_aspect.txt  grid-json-export_baseline.txt  grid-list-pagination_aspect.txt  grid-list-pagination_baseline.txt  grid-lock-permissions_aspect.txt  grid-lock-permissions_baseline.txt  homepage-caching_aspect.txt  homepage-caching_baseline.txt  package-csv-export_aspect.txt  package-csv-export_baseline.txt  package-edit-permissions_aspect.txt  package-edit-permissions_baseline.txt  package-list-pagination_aspect.txt  package-list-pagination_baseline.txt  pypi-fetch-retry_aspect.txt  pypi-fetch-retry_baseline.txt  search-caching_aspect.txt  search-caching_baseline.txt  search-filtering_aspect.txt  search-filtering_baseline.txt
src/repos/djangopackages/tasks/: task01_package_edit_permissions.yaml  task02_grid_lock_permissions.yaml  task03_api_package_404.yaml  task04_api_grid_404.yaml  task05_api_error_schema.yaml  task06_package_pagination.yaml  task07_grid_pagination_filtering.yaml  task08_search_filtering.yaml  task09_homepage_caching.yaml  task10_search_caching.yaml  task11_package_csv_export.yaml  task12_grid_json_export.yaml  task13_pypi_fetch_retry.yaml  task14_github_fetch_timeout.yaml  task15_api_metrics_endpoint.yaml
src/repos/djangopackages/tests/: conftest.py  pytest.ini  test_aspect_bench_api_error_schema.py  test_aspect_bench_api_grid_404.py  test_aspect_bench_api_metrics_endpoint.py  test_aspect_bench_api_package_404.py  test_aspect_bench_github_fetch_timeout.py  test_aspect_bench_grid_json_export.py  test_aspect_bench_grid_list_pagination.py  test_aspect_bench_grid_lock_permissions.py  test_aspect_bench_homepage_caching.py  test_aspect_bench_package_csv_export.py  test_aspect_bench_package_edit_permissions.py  test_aspect_bench_package_list_pagination.py  test_aspect_bench_pypi_fetch_retry.py  test_aspect_bench_search_caching.py  test_aspect_bench_search_filtering.py  test_settings.py
src/repos/fastapi-template/prompts/: add-csv-export_aspect.txt  add-csv-export_baseline.txt  api-response-caching_aspect.txt  api-response-caching_baseline.txt  api-timeout-configuration_aspect.txt  api-timeout-configuration_baseline.txt  consistent-error-schema_aspect.txt  consistent-error-schema_baseline.txt  db-pool-metrics-endpoint_aspect.txt  db-pool-metrics-endpoint_baseline.txt  external-service-retry_aspect.txt  external-service-retry_baseline.txt  missing-item-404_aspect.txt  missing-item-404_baseline.txt  optimize-items-query_aspect.txt  optimize-items-query_baseline.txt  paginated-items-endpoint_aspect.txt  paginated-items-endpoint_baseline.txt  rate-limit-login_aspect.txt  rate-limit-login_baseline.txt  refactor-auth-dependency_aspect.txt  refactor-auth-dependency_baseline.txt  refactor-items-service-layers_aspect.txt  refactor-items-service-layers_baseline.txt  soft-delete-items_aspect.txt  soft-delete-items_baseline.txt  streaming-file-upload_aspect.txt  streaming-file-upload_baseline.txt  stronger-password-policy_aspect.txt  stronger-password-policy_baseline.txt
src/repos/fastapi-template/tasks/: task11_response_caching.yaml  (+14 more)
src/scripts/: generate_experimental_prompts.py  generate_prompts.py  generate_report.py  load_task_defs.py  run_benchmark.py  run_tests_for_task.py
(+16 files in other folders)
