[project]
name = "aspect-bench"
version = "1.0.0"
description = "A/B Testing Framework for LLM Code Generation with Knowledge Base Context"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [
    { name = "Asa Shepard" }
]
keywords = ["llm", "benchmark", "code-generation", "testing", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/asashepard/aspect-bench"
Documentation = "https://github.com/asashepard/aspect-bench#readme"
Repository = "https://github.com/asashepard/aspect-bench.git"
Issues = "https://github.com/asashepard/aspect-bench/issues"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This repo is primarily a benchmarking harness (scripts + task definitions),
# not a traditional importable library. Hatch needs explicit file selection.
packages = ["src/aspect_bench"]
only-include = [
    "src/aspect_bench",
    "src/scripts",
    "src/repos",
    "src/pytest.ini",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "src/scripts/_archive",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "src/scripts/_archive",
]

# This project is primarily a benchmarking harness; scripts intentionally use
# dynamic dict/JSON shapes and external SDKs with evolving types. Keep MyPy
# useful (catch obvious mistakes) without making CI brittle.
disable_error_code = [
    "import-untyped",
    "no-any-return",
    "union-attr",
    "arg-type",
    "assignment",
    "call-overload",
    "index",
    "operator",
    "var-annotated",
    "return-value",
    "attr-defined",
    "misc",
]
